--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "serif",
     "header": {
         "title": "Marketing Playbook",
-        "logo": "images/logo.svg",
+        "logo": "images/xcropped-logo_transparent.png.pagespeed.ic.MHcTU7nJem.png",
         "logo_alt": "Marketing Playbook logo",
         "has_primary_nav": true,
         "primary_nav_links": [
