--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
             }
         ],
         "has_anncmnt": true,
-        "anncmnt_content": "Curabitur ac tellus mattis, tempor ipsum eu, eleifend sapien. **[Learn More](/pricing/)**",
+        "anncmnt_content": "Hosted and Developed by KKGMedia. Part-time Dev, Full time RTX Enjoyer :)\n",
         "anncmnt_align": "left",
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
