--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,13 +11,7 @@
         "logo": "images/xcropped-logo_transparent.png.pagespeed.ic.MHcTU7nJem.png",
         "logo_alt": "Marketing Playbook logo",
         "has_primary_nav": true,
-        "primary_nav_links": [
-            {
-                "label": "Story",
-                "url": "/story",
-                "style": "link"
-            }
-        ],
+        "primary_nav_links": [],
         "has_secondary_nav": true,
         "secondary_nav_links": [],
         "has_anncmnt": true,
