config.json: updated logo in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,7 +22,7 @@
         "anncmnt_id": "new-features"
     },
     "footer": {
-        "logo": "images/logo.svg",
+        "logo": "images/xcropped-logo_transparent.png.pagespeed.ic.MHcTU7nJem-e376b194.png",
         "logo_alt": "Marketing Playbook logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
