--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,13 +24,7 @@
     "footer": {
         "logo_alt": "Marketing Playbook logo",
         "has_primary_nav": true,
-        "primary_nav_links": [
-            {
-                "label": "Style Guide",
-                "url": "/style-guide",
-                "style": "link"
-            }
-        ],
+        "primary_nav_links": [],
         "has_secondary_nav": true,
         "secondary_nav_links": [
             {
