--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
         "tertiary_nav_links": [],
         "has_social": true,
         "social_links": [],
-        "content": "lorem-ipsum",
+        "content": "Copyright KKGMedia 2021 ",
         "links": []
     }
 }
