config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
     },
-    "domain": "https://bot-site-jl684.ondigitalocean.app",
+    "domain": "https://general.kkgmedia.com",
     "footer": {
         "logo_alt": "lorem-ipsum",
         "has_primary_nav": false,
